--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fea1ea">  <td>20/02/03 14:13:31</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestCadastro.IniciaReport()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.TestCadastro@1bb266b3]">&gt;&gt;IniciaReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@16868310</td>   <td></td> </tr>
-<tr bgcolor="fea1ea">  <td>20/02/03 14:13:31</td>   <td>251</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCadastro.beforeMethod()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.TestCadastro@1bb266b3]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@16868310</td>   <td></td> </tr>
-<tr bgcolor="fea1ea">  <td>20/02/03 14:13:43</td>   <td>11852</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCadastro.main()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.TestCadastro@1bb266b3]">main</td> 
-  <td>main@16868310</td>   <td></td> </tr>
-<tr bgcolor="fea1ea">  <td>20/02/03 14:14:25</td>   <td>54353</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCadastro.afterMethod(org.testng.ITestResult)[pri:0, instance:br.com.rsinet.hub_TDD.Testes.TestCadastro@1bb266b3]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@16868310</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>20/02/05 14:24:25</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestCadastro.IniciaReport()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.TestCadastro@2abf4075]">&gt;&gt;IniciaReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@865667596</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>20/02/05 14:24:25</td>   <td>137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCadastro.beforeMethod()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.TestCadastro@2abf4075]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@865667596</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>20/02/05 14:24:39</td>   <td>14069</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCadastro.Cadastro1()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.TestCadastro@2abf4075]">Cadastro1</td> 
+  <td>main@865667596</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>20/02/05 14:25:19</td>   <td>54238</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCadastro.afterMethod(org.testng.ITestResult)[pri:0, instance:br.com.rsinet.hub_TDD.Testes.TestCadastro@2abf4075]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@865667596</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>20/02/05 14:25:21</td>   <td>56122</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCadastro.beforeMethod()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.TestCadastro@2abf4075]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@865667596</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>20/02/05 14:25:34</td>   <td>69061</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCadastro.Cadastro2()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.TestCadastro@2abf4075]">Cadastro2</td> 
+  <td>main@865667596</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>20/02/05 14:26:13</td>   <td>108405</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCadastro.afterMethod(org.testng.ITestResult)[pri:0, instance:br.com.rsinet.hub_TDD.Testes.TestCadastro@2abf4075]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@865667596</td>   <td></td> </tr>
 </table>
