Adicionado Report unico e asserts

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,12 +8,16 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">109,823</td><td></td><td></td></tr>
+<tr><th colspan="7">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">161,653</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">br.com.rsinet.hub_TDD.Testes.TestCadastro</td><td><a href="#m0">Cadastro1</a></td><td rowspan="1">1580923479495</td><td rowspan="1">40163</td></tr><tr class="passedeven"><td><a href="#m1">Cadastro2</a></td><td rowspan="1">1580923534487</td><td rowspan="1">39341</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">br.com.rsinet.hub_TDD.Testes.BuscaLupa</td><td><a href="#m0">BuscaPelaLupa1</a></td><td rowspan="1">1581014905816</td><td rowspan="1">4054</td></tr><tr class="passedeven"><td><a href="#m1">BuscaPelaLupa2</a></td><td rowspan="1">1581014921358</td><td rowspan="1">3239</td></tr><tr class="passedodd"><td rowspan="2">br.com.rsinet.hub_TDD.Testes.PaginaInicial</td><td><a href="#m2">PaginaInicial1</a></td><td rowspan="1">1581014935517</td><td rowspan="1">5803</td></tr><tr class="passedodd"><td><a href="#m3">PaginaInicial2</a></td><td rowspan="1">1581014952249</td><td rowspan="1">15286</td></tr><tr class="passedeven"><td rowspan="2">br.com.rsinet.hub_TDD.Testes.TestCadastro</td><td><a href="#m4">Cadastro1</a></td><td rowspan="1">1581014816064</td><td rowspan="1">33723</td></tr><tr class="passedeven"><td><a href="#m5">Cadastro2</a></td><td rowspan="1">1581014860649</td><td rowspan="1">33891</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">br.com.rsinet.hub_TDD.Testes.TestCadastro#Cadastro1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">br.com.rsinet.hub_TDD.Testes.TestCadastro#Cadastro2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">br.com.rsinet.hub_TDD.Testes.BuscaLupa#BuscaPelaLupa1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">br.com.rsinet.hub_TDD.Testes.BuscaLupa#BuscaPelaLupa2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">br.com.rsinet.hub_TDD.Testes.PaginaInicial#PaginaInicial1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">br.com.rsinet.hub_TDD.Testes.PaginaInicial#PaginaInicial2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">br.com.rsinet.hub_TDD.Testes.TestCadastro#Cadastro1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">br.com.rsinet.hub_TDD.Testes.TestCadastro#Cadastro2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
