--- a/Reports/BuscaLupa_Report.html
+++ b/Reports/BuscaLupa_Report.html
@@ -46,7 +46,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Feb 5, 2020 10:08:29 AM</span>
+                    <span class='label suite-start-time blue darken-3'>Feb 6, 2020 03:44:31 PM</span>
 				</a>
 			</li>
 			<li>
@@ -158,14 +158,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>BuscaPelaLupa</span>
-						<span class='test-time'>Feb 5, 2020 10:08:40 AM</span>
+						<span class='test-time'>Feb 6, 2020 03:44:41 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Feb 5, 2020 10:08:40 AM</span>
-	<span class='label end-time'>Feb 5, 2020 10:08:46 AM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 5s+726ms</span>
+	<span class='label start-time'>Feb 6, 2020 03:44:41 PM</span>
+	<span class='label end-time'>Feb 6, 2020 03:44:45 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 4s+329ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -179,14 +179,14 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>10:08:46 AM</td>
+					<td class='timestamp'>3:44:45 PM</td>
 					<td class='step-details'>Sucesso no caso de Teste: BuscaPelaLupa1</td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
 							<ul class='screenshots'>
-								<li><img data-featherlight='C:\Users\miguel.vale\eclipse-workspace\AppiumTDDAdvantage/Screenshots/BuscaPelaLupa120200205100845.png' width='10%' src='C:\Users\miguel.vale\eclipse-workspace\AppiumTDDAdvantage/Screenshots/BuscaPelaLupa120200205100845.png' data-src='C:\Users\miguel.vale\eclipse-workspace\AppiumTDDAdvantage/Screenshots/BuscaPelaLupa120200205100845.png'></li>
+								<li><img data-featherlight='C:\Users\miguel.vale\eclipse-workspace\AppiumTDDAdvantage/Screenshots/BuscaPelaLupa120200206034445.png' width='10%' src='C:\Users\miguel.vale\eclipse-workspace\AppiumTDDAdvantage/Screenshots/BuscaPelaLupa120200206034445.png' data-src='C:\Users\miguel.vale\eclipse-workspace\AppiumTDDAdvantage/Screenshots/BuscaPelaLupa120200206034445.png'></li>
 							</ul>
 					</div>
 				</li>
@@ -195,14 +195,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='2'>
 					<div class='test-heading'>
 						<span class='test-name'>BuscaPelaLupaNegativo</span>
-						<span class='test-time'>Feb 5, 2020 10:08:55 AM</span>
+						<span class='test-time'>Feb 6, 2020 03:44:55 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Feb 5, 2020 10:08:55 AM</span>
-	<span class='label end-time'>Feb 5, 2020 10:08:57 AM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 1s+960ms</span>
+	<span class='label start-time'>Feb 6, 2020 03:44:55 PM</span>
+	<span class='label end-time'>Feb 6, 2020 03:44:59 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 3s+802ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -216,14 +216,14 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>10:08:57 AM</td>
+					<td class='timestamp'>3:44:59 PM</td>
 					<td class='step-details'>Sucesso no caso de Teste: BuscaPelaLupa2</td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
 							<ul class='screenshots'>
-								<li><img data-featherlight='C:\Users\miguel.vale\eclipse-workspace\AppiumTDDAdvantage/Screenshots/BuscaPelaLupa220200205100857.png' width='10%' src='C:\Users\miguel.vale\eclipse-workspace\AppiumTDDAdvantage/Screenshots/BuscaPelaLupa220200205100857.png' data-src='C:\Users\miguel.vale\eclipse-workspace\AppiumTDDAdvantage/Screenshots/BuscaPelaLupa220200205100857.png'></li>
+								<li><img data-featherlight='C:\Users\miguel.vale\eclipse-workspace\AppiumTDDAdvantage/Screenshots/BuscaPelaLupa220200206034459.png' width='10%' src='C:\Users\miguel.vale\eclipse-workspace\AppiumTDDAdvantage/Screenshots/BuscaPelaLupa220200206034459.png' data-src='C:\Users\miguel.vale\eclipse-workspace\AppiumTDDAdvantage/Screenshots/BuscaPelaLupa220200206034459.png'></li>
 							</ul>
 					</div>
 				</li>
@@ -274,19 +274,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Feb 5, 2020 10:08:29 AM</div>
+					<div class='panel-lead'>Feb 6, 2020 03:44:31 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Feb 5, 2020 10:08:57 AM</div>
+			 		<div class='panel-lead'>Feb 6, 2020 03:45:00 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 27s+590ms</div>
+					<div class='panel-lead'>0h 0m 29s+352ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
