--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,18 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d88cf5">  <td>20/02/05 14:24:25</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestCadastro.IniciaReport()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.TestCadastro@2abf4075]">&gt;&gt;IniciaReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@865667596</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>20/02/05 14:24:25</td>   <td>137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCadastro.beforeMethod()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.TestCadastro@2abf4075]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@865667596</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>20/02/05 14:24:39</td>   <td>14069</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCadastro.Cadastro1()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.TestCadastro@2abf4075]">Cadastro1</td> 
-  <td>main@865667596</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>20/02/05 14:25:19</td>   <td>54238</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCadastro.afterMethod(org.testng.ITestResult)[pri:0, instance:br.com.rsinet.hub_TDD.Testes.TestCadastro@2abf4075]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@865667596</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>20/02/05 14:25:21</td>   <td>56122</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCadastro.beforeMethod()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.TestCadastro@2abf4075]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@865667596</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>20/02/05 14:25:34</td>   <td>69061</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCadastro.Cadastro2()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.TestCadastro@2abf4075]">Cadastro2</td> 
-  <td>main@865667596</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>20/02/05 14:26:13</td>   <td>108405</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCadastro.afterMethod(org.testng.ITestResult)[pri:0, instance:br.com.rsinet.hub_TDD.Testes.TestCadastro@2abf4075]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@865667596</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>20/02/06 15:44:31</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BuscaLupa.IniciaReport()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.BuscaLupa@4da4253]">&gt;&gt;IniciaReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1771667101</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>20/02/06 15:44:31</td>   <td>147</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BuscaLupa.beforeMethod()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.BuscaLupa@4da4253]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1771667101</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>20/02/06 15:44:41</td>   <td>10147</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BuscaLupa.BuscaPelaLupa1()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.BuscaLupa@4da4253]">BuscaPelaLupa1</td> 
+  <td>main@1771667101</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>20/02/06 15:44:45</td>   <td>13937</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BuscaLupa.afterMethod(org.testng.ITestResult)[pri:0, instance:br.com.rsinet.hub_TDD.Testes.BuscaLupa@4da4253]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1771667101</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>20/02/06 15:44:46</td>   <td>15432</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BuscaLupa.beforeMethod()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.BuscaLupa@4da4253]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1771667101</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>20/02/06 15:44:55</td>   <td>24754</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BuscaLupa.BuscaPelaLupa2()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.BuscaLupa@4da4253]">BuscaPelaLupa2</td> 
+  <td>main@1771667101</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>20/02/06 15:44:59</td>   <td>28282</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BuscaLupa.afterMethod(org.testng.ITestResult)[pri:0, instance:br.com.rsinet.hub_TDD.Testes.BuscaLupa@4da4253]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1771667101</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>20/02/06 15:45:00</td>   <td>29405</td> <td>&nbsp;</td><td title="&lt;&lt;BuscaLupa.finalizaReport()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.BuscaLupa@4da4253]">&lt;&lt;finalizaReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1771667101</td>   <td></td> </tr>
 </table>
