Adicionado outra forma de Scroll para agilizar o teste

--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -25,14 +25,14 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>beforeMethod</td>
+<td>inicializaTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>afterMethod</td>
+<td>finalizaTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
@@ -59,14 +59,14 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>beforeMethod</td>
+<td>inicializaTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>afterMethod</td>
+<td>finalizaTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
@@ -93,14 +93,14 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>beforeMethod</td>
+<td>InicioTeste</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>afterMethod</td>
+<td>finalizaTeste</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
