--- a/test-output/index.html
+++ b/test-output/index.html
@@ -266,32 +266,32 @@ data.addRows(6);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'Cadastro1')
 data.setCell(0, 2, 'br.com.rsinet.hub_TDD.Testes.TestCadastro')
-data.setCell(0, 3, 50833);
+data.setCell(0, 3, 42543);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'Cadastro2')
 data.setCell(1, 2, 'br.com.rsinet.hub_TDD.Testes.TestCadastro')
-data.setCell(1, 3, 44855);
+data.setCell(1, 3, 41521);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'PaginaInicial2')
 data.setCell(2, 2, 'br.com.rsinet.hub_TDD.Testes.PaginaInicial')
-data.setCell(2, 3, 15384);
+data.setCell(2, 3, 15654);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'PaginaInicial1')
 data.setCell(3, 2, 'br.com.rsinet.hub_TDD.Testes.PaginaInicial')
-data.setCell(3, 3, 5359);
+data.setCell(3, 3, 5431);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'BuscaPelaLupa1')
+data.setCell(4, 1, 'BuscaPelaLupa2')
 data.setCell(4, 2, 'br.com.rsinet.hub_TDD.Testes.BuscaLupa')
-data.setCell(4, 3, 3766);
+data.setCell(4, 3, 3999);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'BuscaPelaLupa2')
+data.setCell(5, 1, 'BuscaPelaLupa1')
 data.setCell(5, 2, 'br.com.rsinet.hub_TDD.Testes.BuscaLupa')
-data.setCell(5, 3, 3328);
+data.setCell(5, 3, 3797);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 minutes</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -327,113 +327,113 @@ return data;
               <div class="chronological-class-name">br.com.rsinet.hub_TDD.Testes.PaginaInicial</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">IniciaReport</span>
-                <span class="method-start">206 ms</span>
+                <span class="method-start">307 ms</span>
               </div> <!-- configuration-test before -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">br.com.rsinet.hub_TDD.Testes.TestCadastro</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">IniciaReport</span>
-                <span class="method-start">208 ms</span>
+                <span class="method-start">308 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-method before">
-                <span class="method-name">beforeMethod</span>
-                <span class="method-start">225 ms</span>
+                <span class="method-name">InicioTeste</span>
+                <span class="method-start">345 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">Cadastro1</span>
-                <span class="method-start">12775 ms</span>
+                <span class="method-start">12858 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">afterMethod([TestResult name=Cadastro1 status=SUCCESS method=TestCadastro.Cadastro1()[pri:0, instance:br.com.rsi...)</span>
-                <span class="method-start">63612 ms</span>
+                <span class="method-name">finalizaTeste([TestResult name=Cadastro1 status=SUCCESS method=TestCadastro.Cadastro1()[pri:0, instance:br.com.rsi...)</span>
+                <span class="method-start">55404 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
-                <span class="method-name">beforeMethod</span>
-                <span class="method-start">64677 ms</span>
+                <span class="method-name">InicioTeste</span>
+                <span class="method-start">56652 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">Cadastro2</span>
-                <span class="method-start">75659 ms</span>
+                <span class="method-start">67157 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">afterMethod([TestResult name=Cadastro2 status=SUCCESS method=TestCadastro.Cadastro2()[pri:0, instance:br.com.rsi...)</span>
-                <span class="method-start">120515 ms</span>
+                <span class="method-name">finalizaTeste([TestResult name=Cadastro2 status=SUCCESS method=TestCadastro.Cadastro2()[pri:0, instance:br.com.rsi...)</span>
+                <span class="method-start">108679 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">br.com.rsinet.hub_TDD.Testes.BuscaLupa</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
-                <span class="method-name">beforeMethod</span>
-                <span class="method-start">121343 ms</span>
+                <span class="method-name">inicializaTest</span>
+                <span class="method-start">109713 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">BuscaPelaLupa1</span>
-                <span class="method-start">130720 ms</span>
+                <span class="method-start">121293 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">afterMethod([TestResult name=BuscaPelaLupa1 status=SUCCESS method=BuscaLupa.BuscaPelaLupa1()[pri:0, instance:br....)</span>
-                <span class="method-start">134487 ms</span>
+                <span class="method-name">finalizaTest([TestResult name=BuscaPelaLupa1 status=SUCCESS method=BuscaLupa.BuscaPelaLupa1()[pri:0, instance:br....)</span>
+                <span class="method-start">125092 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
-                <span class="method-name">beforeMethod</span>
-                <span class="method-start">135628 ms</span>
+                <span class="method-name">inicializaTest</span>
+                <span class="method-start">126586 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">BuscaPelaLupa2</span>
-                <span class="method-start">145167 ms</span>
+                <span class="method-start">138395 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">afterMethod([TestResult name=BuscaPelaLupa2 status=SUCCESS method=BuscaLupa.BuscaPelaLupa2()[pri:0, instance:br....)</span>
-                <span class="method-start">148495 ms</span>
+                <span class="method-name">finalizaTest([TestResult name=BuscaPelaLupa2 status=SUCCESS method=BuscaLupa.BuscaPelaLupa2()[pri:0, instance:br....)</span>
+                <span class="method-start">142396 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">br.com.rsinet.hub_TDD.Testes.PaginaInicial</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
-                <span class="method-name">beforeMethod</span>
-                <span class="method-start">149299 ms</span>
+                <span class="method-name">inicializaTest</span>
+                <span class="method-start">143329 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">PaginaInicial1</span>
-                <span class="method-start">159297 ms</span>
+                <span class="method-start">153366 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">afterMethod([TestResult name=PaginaInicial1 status=SUCCESS method=PaginaInicial.PaginaInicial1()[pri:0, instance...)</span>
-                <span class="method-start">164658 ms</span>
+                <span class="method-name">finalizaTest([TestResult name=PaginaInicial1 status=SUCCESS method=PaginaInicial.PaginaInicial1()[pri:0, instance...)</span>
+                <span class="method-start">158798 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
-                <span class="method-name">beforeMethod</span>
-                <span class="method-start">165629 ms</span>
+                <span class="method-name">inicializaTest</span>
+                <span class="method-start">159842 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">PaginaInicial2</span>
-                <span class="method-start">175152 ms</span>
+                <span class="method-start">169291 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">afterMethod([TestResult name=PaginaInicial2 status=SUCCESS method=PaginaInicial.PaginaInicial2()[pri:0, instance...)</span>
-                <span class="method-start">190536 ms</span>
+                <span class="method-name">finalizaTest([TestResult name=PaginaInicial2 status=SUCCESS method=PaginaInicial.PaginaInicial2()[pri:0, instance...)</span>
+                <span class="method-start">184946 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">br.com.rsinet.hub_TDD.Testes.BuscaLupa</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">finalizaReport</span>
-                <span class="method-start">191529 ms</span>
+                <span class="method-start">186039 ms</span>
               </div> <!-- configuration-test after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">br.com.rsinet.hub_TDD.Testes.PaginaInicial</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">finalizaReport</span>
-                <span class="method-start">191531 ms</span>
+                <span class="method-start">186041 ms</span>
               </div> <!-- configuration-test after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">br.com.rsinet.hub_TDD.Testes.TestCadastro</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">finalizaReport</span>
-                <span class="method-start">191531 ms</span>
+                <span class="method-start">186041 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
