--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,20 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d88cf5">  <td>20/02/06 15:44:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BuscaLupa.BuscaPelaLupa1()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.BuscaLupa@4da4253]">BuscaPelaLupa1</td> 
-  <td>main@1771667101</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>20/02/06 15:44:55</td>   <td>14607</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BuscaLupa.BuscaPelaLupa2()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.BuscaLupa@4da4253]">BuscaPelaLupa2</td> 
-  <td>main@1771667101</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>20/02/06 15:44:31</td>   <td>-10147</td> <td>&nbsp;</td><td title="&gt;&gt;BuscaLupa.IniciaReport()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.BuscaLupa@4da4253]">&gt;&gt;IniciaReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1771667101</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>20/02/06 15:44:45</td>   <td>3790</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BuscaLupa.afterMethod(org.testng.ITestResult)[pri:0, instance:br.com.rsinet.hub_TDD.Testes.BuscaLupa@4da4253]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1771667101</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>20/02/06 15:44:59</td>   <td>18135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BuscaLupa.afterMethod(org.testng.ITestResult)[pri:0, instance:br.com.rsinet.hub_TDD.Testes.BuscaLupa@4da4253]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1771667101</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>20/02/06 15:44:31</td>   <td>-10000</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BuscaLupa.beforeMethod()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.BuscaLupa@4da4253]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1771667101</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>20/02/06 15:44:46</td>   <td>5285</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BuscaLupa.beforeMethod()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.BuscaLupa@4da4253]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1771667101</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>20/02/06 15:45:00</td>   <td>19258</td> <td>&nbsp;</td><td title="&lt;&lt;BuscaLupa.finalizaReport()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.BuscaLupa@4da4253]">&lt;&lt;finalizaReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1771667101</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>20/02/11 12:33:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCadastro.Cadastro1()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.TestCadastro@4cc8eb05]">Cadastro1</td> 
+  <td>main@1354083458</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>20/02/11 12:34:44</td>   <td>52285</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCadastro.Cadastro2()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.TestCadastro@4cc8eb05]">Cadastro2</td> 
+  <td>main@1354083458</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>20/02/11 12:33:39</td>   <td>-12995</td> <td>&nbsp;</td><td title="&gt;&gt;TestCadastro.IniciaReport()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.TestCadastro@4cc8eb05]">&gt;&gt;IniciaReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1354083458</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>20/02/11 12:33:40</td>   <td>-12625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCadastro.InicioTeste()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.TestCadastro@4cc8eb05]">&gt;&gt;InicioTeste</td> 
+<td>&nbsp;</td>  <td>main@1354083458</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>20/02/11 12:34:35</td>   <td>42361</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCadastro.InicioTeste()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.TestCadastro@4cc8eb05]">&gt;&gt;InicioTeste</td> 
+<td>&nbsp;</td>  <td>main@1354083458</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>20/02/11 12:35:28</td>   <td>96038</td> <td>&nbsp;</td><td title="&lt;&lt;TestCadastro.finalizaReport()[pri:0, instance:br.com.rsinet.hub_TDD.Testes.TestCadastro@4cc8eb05]">&lt;&lt;finalizaReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1354083458</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>20/02/11 12:34:33</td>   <td>41227</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCadastro.finalizaTeste(org.testng.ITestResult)[pri:0, instance:br.com.rsinet.hub_TDD.Testes.TestCadastro@4cc8eb05]">&lt;&lt;finalizaTeste</td> 
+<td>&nbsp;</td>  <td>main@1354083458</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>20/02/11 12:35:27</td>   <td>95057</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCadastro.finalizaTeste(org.testng.ITestResult)[pri:0, instance:br.com.rsinet.hub_TDD.Testes.TestCadastro@4cc8eb05]">&lt;&lt;finalizaTeste</td> 
+<td>&nbsp;</td>  <td>main@1354083458</td>   <td></td> </tr>
 </table>
